# SchoolPortalServer

./: .env  Cargo.toml  DB_Dockerfile  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
configuration/: base.yaml  production.yaml
migrations/: 20230310164808_init_tables.down.sql  20230310164808_init_tables.up.sql  20230322155653_email_field.down.sql  20230322155653_email_field.up.sql  20230326103644_img_field.down.sql  20230326103644_img_field.up.sql  20230329150127_users_table.up.sql
src/: errors.rs  lib.rs  logging.rs  main.rs
src/app/: avatar.rs  configurations.rs  mod.rs  services.rs
src/auth/: handlers.rs  middleware.rs  mod.rs
src/db/: functionality.rs  mod.rs  user.rs
src/schemas/: jwt.rs  mod.rs  student.rs  user.rs
templates/: index.html
tests/api/: auth_user_tests.rs  avatar_tests.rs  delete_student_test.rs  get_students_tests.rs  health_check.rs  main.rs  post_students_tests.rs
